# testomat_auto_tests

./: .env  .gitignore  .pre-commit-config.yaml  README.md  api-1.yaml  pyproject.toml  pytest.ini  requirements.txt
src/api/: __init__.py  client.py
src/config/: __init__.py  settings.py
src/web/: Application.py  __init__.py  application.py
src/web/components/: SideBar.py  __init__.py  project_page_header.py  side_bar.py  test_modal.py
src/web/pages/: CreateNewProjectPage.py  HomePage.py  LoginPage.py  ManageProjectsPage.py  ProjectDetailPage.py  ProjectPage.py  ProjectsPage.py  __init__.py  create_new_project_page.py  home_page.py  login_page.py  manage_projects_page.py  project_detail_page.py  projects_page.py
src/web/selenium/core/: base_page.py  waits.py
src/web/selenium/pages/: login_page.py  login_page_v2.py
tests/: conftest.py  first_test.py  test_first.py  test_with_codegen.py
tests/api/: test_projects.py
tests/fixtures/: __init__.py  api.py  app.py  auth.py  browser.py  config.py  cookie_helper.py  data.py  playwright.py
tests/sandbox/: __init__.py  test_first.py  test_with_codegen.py
tests/web/: cookies_test.py  create_project_test.py  login_page_test.py  one_project_test.py  projects_test.py
tests/web/enterprise_plan_tests/: project_creation_test.py  projects_test.py  switch_company_test.py
tests/web/free_plan_tests/: free_proj_test.py
tests/web/selenium/: simple_test_via_selenium.py
